# emma

./: .gitignore  CHANGELOG.md  flake.nix  pyproject.toml
nix/: home.nix  package.nix
src/email_agent/: __init__.py  audit.py  cli.py  config.py  models.py  tui.py
src/email_agent/completions/: emma.yaml
src/email_agent/integrations/: __init__.py
src/email_agent/processors/: __init__.py  llm.py  rules.py
src/email_agent/service/: __init__.py  action_items.py  daemon.py  digest.py  monitor.py  state.py
src/email_agent/service/plugins/: __init__.py  base.py
src/email_agent/service/plugins/delivery/: __init__.py  file.py
src/email_agent/sources/: __init__.py  base.py  imap.py  maildir.py  notmuch.py
src/email_agent/utils/: __init__.py  text.py
tests/: __init__.py  test_action_items.py  test_digest_generator.py  test_monitor.py  test_rules.py  test_service_state.py  test_text_utils.py
